Data Cleaning-almost done
Update:

Solved runtime issue for replacing station names in ridership data.

Done:
Weather data cleaned. ridership data cleaned.  The two datasets are merged into one dataframe and saved to csv file.
station data cleaned and saved to csv file.

To do: check if there are duplicate trips in ridership data. If so, remove duplicate and run data cleaning again.

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ data/weather/en_climate_hourly_ON_6158359_09-2017_P1H.csv
 data/weather/en_climate_hourly_ON_6158359_08-2022_P1H.csv
 data/weather/en_climate_hourly_ON_6158359_08-2021_P1H.csv
 data/weather/en_climate_hourly_ON_6158359_08-2020_P1H.csv
+data/bikeshare ridership merged with weather-cleaned.csv
