--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,12 @@ data/weather/en_climate_hourly_ON_6158359_08-2022_P1H.csv
 data/weather/en_climate_hourly_ON_6158359_08-2021_P1H.csv
 data/weather/en_climate_hourly_ON_6158359_08-2020_P1H.csv
 data/bikeshare ridership merged with weather-cleaned.csv
+*.sbx
+*.sbn
+*.shp
+*.shx
+*.xml
+*.prj
+*.dbf
+*.csv
+*.cpg
